<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/biceps"
        android:scaleType="centerInside"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/button16"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/legs_ercise_1"
            android:textColor="@color/white"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/button17"
            android:layout_width="425dp"
            android:layout_height="105dp"
            android:layout_marginTop="20dp"
            android:text="@string/legs_ercise_2"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/button18"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginTop="20dp"
            android:text="@string/legs_ercise_3"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/button19"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginTop="20dp"
            android:text="@string/legs_ercise_4"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/button20"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginTop="20dp"
            android:text="@string/legs_ercise_5"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:textSize="20dp"/>

    </LinearLayout>

</RelativeLayout>
